# MCP-repo-assistant

./: .env.example  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py  test2.py
.github/workflows/: test.yml
eval/: evaluate.py  questions.jsonl
src/agent/: assistant.py  parallel_executor.py  prompts.py  task_orchestrator.py  tools.py
src/api/: __init__.py  app.py  logging_config.py
src/api/static/: app.js  index.css  index.html
src/mcp_server/: server.py
src/rag/: ingest.py  retriever.py
tests/: conftest.py  test_api.py  test_assistant.py  test_orchestration.py  test_security.py
