[project]
name = "mcp-repo-assistant"
version = "0.1.0"
description = "MCP-Powered GitHub Repo Assistant"
authors = [{ name = "AI Assistant" }]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "langgraph>=0.0.30",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "qdrant-client>=1.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "PyGithub>=2.3.0",
    "langfuse>=2.30.0",
    "ragas>=0.1.7",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "langchain-qdrant>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src", "tests", "eval"]
venvPath = "."
venv = ".venv"
extraPaths = ["."]
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

